--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -24,7 +24,7 @@
             <button href="#" id="btnPurchase" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="btnPurchaseAccessClick()">Get Access</button><br/>
             <span style="font-size:.8rem">Have an Access Code? <a href="#" onclick="EnterAccessCode()">Enter it here</a></span>
         </div>
-        <br/><br/><a href="/media/stslivegym-spectator-signup.mp4" target="_blank">How to spectate a session</a><br/>
+        <br/><br/><a href="/media/stslivegym-spectator-signup.mp4" target="_blank">Instructions - how to see a session</a><br/>
     </div>
 		
 </div>
