--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -138,18 +138,18 @@
 
                     <table cellspacing="0" cellpadding="0" border="0" style="font-size:0.75rem;">
                         {% if simple_d %}
-                            <tr><td id="tdStartValue" align="right" style="text-decoration:underline">Start Value:</td><td><input type="text" id="txtStartValue" placeholder="Start Value" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
-                            <tr><td id="tdYourTotal" align="right" style="text-decoration:underline">Your Score:</td><td><input type="text" id="txtYourTotal" placeholder="Total" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
+                            <tr><td id="tdStartValue" align="right" style="text-decoration:underline">Start Value:</td><td><input type="text" id="txtStartValue" placeholder="Start Value" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
+                            <tr><td id="tdYourTotal" align="right" style="text-decoration:underline">Your Score:</td><td><input type="text" id="txtYourTotal" placeholder="Total" class="ui-disabled entrybox" onkeypress="return isNumberKey(event,true)" onClick="this.setSelectionRange(0, this.value.length)"></td></tr>
                             <tr><td colspan="2" align="right"><a href="#" id="btnSetDScore" type="button" class="btn btn-main mb-2 mt-2 ui-disabled" onclick="SetScoreClick()" style="font-size:1rem">Set Score</a></td></tr>
                             <tr><td id="tdD2Score" align="right" style="display:none">D2 Score:</td><td id="divD2Score" style="display:none"></td></tr>
                             <tr><td id="tdTotal" align="right" style="text-decoration:underline">Total Score:</td><td id="divTotalScore" style="text-decoration:underline"></td></tr>
                         {% else %}
-                            <tr><td id="tdElements" align="right">Elements:</td><td><input type="text" id="txtElements" placeholder="Elements" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
-	                        <tr><td id="tdDifficulty" align="right">Base Score:</td><td><input type="text" id="txtDifficulty" placeholder="Difficulty" class="ui-disabled entrybox"  onkeypress="return isNumberKey(event)" ></td></tr>
-	                        <tr><td id="tdGroups" align="right">Groups:</td><td><input type="text" id="txtGroups" placeholder="Groups" class="ui-disabled entrybox"  onkeypress="return isNumberKey(event)" ></td></tr>
-	                        <tr id="trBonus"><td id="tdBonus" align="right">Bonus:</td><td><input type="text" id="txtBonus" placeholder="Bonus" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
-                            <tr id="trConnection" style="display:none"><td id="tdConnection" align="right">Connection:</td><td><input type="text" id="txtConnection" placeholder="Connection Bonus" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
-	                        <tr><td id="tdNeutralDed" align="right">Neutral Deductions:</td><td><input type="text" id="txtNeutralDed" placeholder="Neutral Ded." class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
+                            <tr><td id="tdElements" align="right">Elements:</td><td><input type="text" id="txtElements" placeholder="Elements" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
+	                        <tr><td id="tdDifficulty" align="right">Base Score:</td><td><input type="text" id="txtDifficulty" placeholder="Difficulty" class="ui-disabled entrybox"  onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
+	                        <tr><td id="tdGroups" align="right">Groups:</td><td><input type="text" id="txtGroups" placeholder="Groups" class="ui-disabled entrybox"  onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
+	                        <tr id="trBonus"><td id="tdBonus" align="right">Bonus:</td><td><input type="text" id="txtBonus" placeholder="Bonus" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
+                            <tr id="trConnection" style="display:none"><td id="tdConnection" align="right">Connection:</td><td><input type="text" id="txtConnection" placeholder="Connection Bonus" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
+	                        <tr><td id="tdNeutralDed" align="right">Neutral Deductions:</td><td><input type="text" id="txtNeutralDed" placeholder="Neutral Ded." class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" onClick="this.setSelectionRange(0, this.value.length)" ></td></tr>
 	                        <tr><td id="tdDScore" align="right" style="text-decoration:underline">D-Score:</td><td><div id="lblDScore" style="text-decoration:underline"></div></td></tr>
 	                        <tr><td colspan="2" align="right"><a href="#" id="btnSetDScore" type="button" class="btn btn-main mb-2 mt-2 ui-disabled" onclick="SetDScoreClick()" style="font-size:1rem">{% if session.use_ejudge_dots %}Set D-Score{% else %}Set Score{% endif %}</a></td></tr>
                             {% if session.use_ejudge_dots %}
@@ -896,9 +896,9 @@
             }
         }
         else {
-            $("#txtYourTotal").val('0.0');
+            $("#txtYourTotal").val('');
             if (LoadRot=="")
-                $("#txtStartValue").val('0.0');
+                $("#txtStartValue").val('');
         }
         if (SimpleHasD2)
             $("#divD2Score").html();
@@ -1822,7 +1822,12 @@
         ScoringType = GymnastScoringType[AthleteIn];
         ScoringSpecific = GymnastLevels[AthleteIn];
     }
-    function isNumberKey(evt) {
+    function isNumberKey(evt, CanEnter = false) {
+        if (CanEnter) {
+            if(evt.which == 13) {
+                SetScoreClick();
+             }
+        }
         var charCode = (evt.which) ? evt.which : evt.keyCode;
         if (charCode != 46 && charCode > 31
             && (charCode < 48 || charCode > 57))
@@ -1931,9 +1936,9 @@
             }
         }
         else {
-            $("#txtYourTotal").val('0.0');
+            $("#txtYourTotal").val('');
             if (LoadRot=="")
-                $("#txtStartValue").val('0.0');
+                $("#txtStartValue").val('');
             
         }
     }
