--- a/STSEval/app/templates/app/d2_wag.html
+++ b/STSEval/app/templates/app/d2_wag.html
@@ -35,9 +35,9 @@
                     <div id="divRoutineStatus"></div>
                     <div id="J1Score">J1 Score: ---</div>
                      Start Value<br/>
-                    <input type="text" id="txtStartValue" placeholder="Start Value" class="ui-disabled" onkeypress="return isNumberKey(event)" ><br/>
+                    <input type="text" id="txtStartValue" placeholder="Start Value" class="ui-disabled" onkeypress="return isNumberKey(event)"  onClick="this.setSelectionRange(0, this.value.length)" ><br/>
                     Your Score<br/>
-                    <input type="text" id="txtYourScore" placeholder="Your Score" class="ui-disabled" onkeypress="return isNumberKey(event)" ><br/>
+                    <input type="text" id="txtYourScore" placeholder="Your Score" class="ui-disabled" onkeypress="return isNumberKey(event,true)" onClick="this.setSelectionRange(0, this.value.length)" ><br/>
                     <button href="#" id="btnSubmitScore" type="button" class="btn btn-main mt-2 ui-disabled" style="width:200px" onclick="SubmitScore()">Submit Score</button><br/>
                 </div>
                 <div id="divReady" style="height:100%;display:none;justify-content:center;flex-grow:1;color:black">
@@ -286,7 +286,12 @@
     }
 
 
-    function isNumberKey(evt) {
+    function isNumberKey(evt,CanEnter = false) {
+        if (CanEnter) {
+            if(evt.which == 13) {
+                SubmitScore();
+             }
+        }
         var charCode = (evt.which) ? evt.which : evt.keyCode;
         if (charCode != 46 && charCode > 31
             && (charCode < 48 || charCode > 57))
