--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -1855,6 +1855,8 @@
                 $("#txtGroups").hide();
                 $("#tdGroups").hide();
                 $("#lblGroups").hide();
+                $("#trBonus").show();
+                $("#trConnection").hide();
                 $("#tdBonus").html("Bonus: ");
                 $("#tdEScore").html("Average Deduction: ");
             }
@@ -1873,6 +1875,7 @@
                 }
                 $("#tdDScore").html("D-Score:");
                 $("#txtDifficulty").val('0.0');
+                $("#trBonus").show();
                 $("#txtBonus").val('0.0');
                 $("#txtConnection").val('0.0');
                 $("#txtNeutralDed").val('0.0');
