AA include event scores

--- a/STSEval/management/templates/management/email_notice.html
+++ b/STSEval/management/templates/management/email_notice.html
@@ -10,7 +10,7 @@
 
 
 <p>{% if tutorial_video %}
-        View a tutorial for your role <a href="https://stslivegym.com/media/{{tutorial_video}}">here</a><br/>
+        View a tutorial for your role <a href="https://stslivegym.com/media/{{tutorial_video}}">here</a>.<br/>
     {% endif %}
     Click the login button below to automatically sign in.  Your login information for this assignment is as follows:</p>
 
@@ -30,7 +30,7 @@
 <br>
 Or sign in to the competition manually by going to <a href='https://stslivegym.com{{url_extra}}' target='_blank'>STS Live Gym</a> and entering your email and password. 
     <br/>
-To access the scoreboard after the competition is complete, signup as a spectator with the same email address and you will receive free access.
+To access the scoreboard after the competition is complete, signup as a spectator with the same email address and you will receive free access to the competition.
 
 </div>
 <hr>
