--- a/STSEval/app/templates/app/scoreboard.html
+++ b/STSEval/app/templates/app/scoreboard.html
@@ -51,7 +51,6 @@
     var TotalOnly = {{total_only|lower}};
     var DisplayFilters = {{show_filters|lower}};
 
-
     
 </script>
 <script type="text/javascript">
@@ -62,6 +61,7 @@
     var Videos = new Array();
     var dbF = firebase.firestore();
     firebase.firestore.setLogLevel('debug');
+    var fieldstest;
     if (ev == "AA") {
         //just check every x seconds
         GetRoutineAAData();
@@ -290,34 +290,7 @@
         }
     }
 
-    function UpdateAA(data) {
-        console.log(data);
-        //$('#divShorthandResults').empty();
-        for (var i = 0; i < data.length; i++) {
-            data[i]["Place"] = i + 1;
-            data[i]["total_score"] = FormatWith0(Math.round((data[i]["total_score"] + Number.EPSILON) * 1000) / 1000);
-        }
-
-        $("#jsGrid").jsGrid({
-            width: "100%",
-            height: "600px",
-            inserting: false,
-            editing: false,
-            sorting: true,
-            paging: false,
-
-            data: data,
-
-            fields: [
-                { name: "Place", title: "#", type: "number", width: 25 },
-                { name: "athlete__name", title: "Gymnast", type: "text" },
-                { name: "athlete__team__name", title: "Team", type: "text" },
-                { name: "total_score", title: "Final Score", type: "number" }
-
-            ]
-        });
-
-    }
+   
 
     function UpdateTeams(data) {
         console.log(data);
@@ -446,5 +419,42 @@
     }
 
 
+</script>
+<script>
+     function UpdateAA(data) {
+        console.log(data);
+        //$('#divShorthandResults').empty();
+        for (var i = 0; i < data.length; i++) {
+            data[i]["Place"] = i + 1;
+            data[i]["total_score"] = FormatWith0(Math.round((data[i]["total_score"] + Number.EPSILON) * 1000) / 1000);
+            {% for ev in events %}
+                 data[i]["{{ev|upper}}"] = FormatWith0(Math.round((data[i]["{{ev|upper}}"] + Number.EPSILON) * 100) / 100);
+            {% endfor %}
+        }
+        
+
+        $("#jsGrid").jsGrid({
+            width: "100%",
+            height: "600px",
+            inserting: false,
+            editing: false,
+            sorting: true,
+            paging: false,
+
+            data: data,
+
+            fields: [
+                { name: "Place", title: "#", type: "number", width: 25 },
+                { name: "athlete__name", title: "Gymnast", type: "text" },
+                { name: "athlete__team__name", title: "Team", type: "text" },
+                {% for ev in events %}
+                    { name: "{{ev|upper}}", title: "{{ev|upper}}", type: "number" },
+                {% endfor %}
+                { name: "total_score", title: "Final Score", type: "number" }
+
+            ]
+        });
+
+    }
 </script>
 {% endblock %}
