admin tutorial video

--- a/STSEval/app/templates/app/help/admin_overview.html
+++ b/STSEval/app/templates/app/help/admin_overview.html
@@ -1,4 +1,5 @@
 <div id="divHelpManageTeam" align="center">
+<p align="left">View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-tutorial-admin-overview.mp4">here.</a></p>
 <p align="left">Event tabs change events:</p>
 <table><tbody><tr align="center">
 <td><img src="https://static.stslivegym.com/stseval-static/static/app/images/fx-white.svg" height="45px"></td>
