--- a/STSEval/management/templates/management/session_management.html
+++ b/STSEval/management/templates/management/session_management.html
@@ -9,7 +9,7 @@
              <h2>Overview</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
-            <span class="muted-text">Manage a currently active session here.  You can also re-arrange start lists and view the session live.</span><br/>
+            <span class="muted-text">Manage a currently active session here.  You can also re-arrange start lists and view the session live.  View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-tutorial-admin-overview.mp4">here.</a></span><br/>
             <a href="/overview/{{session.id}}"><button href="#"  type="button" class="btn btn-main mt-2">Session Overview</button></a>
         </div>
 
