email notice imporvements.

--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -328,7 +328,8 @@
             },
              success: function (data) {
                  SessionFinished = true;
-                $("#btnFinish").addClass("ui-disabled");
+                 $("#btnFinish").addClass("ui-disabled");
+                 alert("Session has been completed.");
               
             }
         });
