--- a/STSEval/management/templates/management/setup_cameras.html
+++ b/STSEval/management/templates/management/setup_cameras.html
@@ -30,6 +30,22 @@
 	        </div>
 	    </div>
     </div>
+     <div style="width:650px" align="left">
+            <b>Camera requirements:</b>
+            <ul>
+                <li>Dedicated STABLE wired internet connection</li>
+                <li>30 Mbps+ upload speed PER camera at location (speedtest.net)</li>
+                <li>Camera devices:
+                    <ul>
+                        <li>IPhone with IOS 13+</li>
+                        <li>Android phone with Android 9+</li>
+                        <li>Windows 8.1+ computer with webcam capable of 30fps at 720p resolution (Logitech C920 HD Pro)</li>
+                        <li>Camcorder that can connect to computer via usb as a webcam</li>
+                    </ul>
+                <li>Camera and microphone access allowed in device settings</li>
+                <li>Ability to run zoom video call with no video glitches or stutters</li>
+            </ul></div>
+   
     <div id="divMissing" style="color:red;font-size:.85rem">&nbsp;</div>
     <div>
         <button id="btnBack" type="button" class="btn-main pt-4 pb-4" style="border-radius: 1rem;" onclick="GoBack()">Return to<br/>Previous Page</button>
