--- a/STSEval/management/templates/management/setup_testing.html
+++ b/STSEval/management/templates/management/setup_testing.html
@@ -19,13 +19,27 @@
              <h2>Camera Testing</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
-            Each camera must:
+            <b>Camera requirements:</b>
+            <ul>
+                <li>Dedicated STABLE wired internet connection</li>
+                <li>30 Mbps+ upload speed PER camera at location (speedtest.net)</li>
+                <li>Camera devices:
+                    <ul>
+                        <li>IPhone with IOS 13+</li>
+                        <li>Android phone with Android 9+</li>
+                        <li>Windows 8.1+ computer with webcam capable of 30fps at 720p resolution (Logitech C920 HD Pro)</li>
+                        <li>Camcorder that can connect to computer via usb as a webcam</li>
+                    </ul>
+                <li>Camera and microphone access allowed in device settings</li>
+                <li>Ability to run zoom video call with no video glitches or stutters</li>
+            </ul>
+             <b>Each camera must:</b>
             <ul>
                 <li>Stream for 5+ minutes</li>
                 <li>Have rapid movement in front of the camera (an actual performance is best)</li>
                 <li>Be observed by the administrator (you)</li>
             </ul>
-            What to check for:
+             <b>What to check for:</b>
             <ul>
                 <li>Blurry movement.  This is most likely from a low quality camera or computer
                     <ul>
@@ -57,7 +71,7 @@
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
             This will let the judges practice with the live gym system.<br/>
-            Each judge needs to:
+           </b> Each judge needs to:</b>
             <ul>
                 <li>Login to their appropriate role(s)</li>
                 <li>Run through the judging process at least twice for each role</li>
