--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -60,6 +60,7 @@
                                             <a class="dropdown-item" href="/management/setup_judges/{{request.session.session}}">setup</a>
                                             <a class="dropdown-item" href="/management/spectator_management/{{request.session.session}}">spectator management</a>
                                             <a class="dropdown-item" target="_blank" href="/backup_video_manage/{{request.session.session}}/">backup videos</a>
+                                            <a class="dropdown-item" target="_blank" href="/management/setup_testing/">testing</a>
                                         </div>
                                     </li>
                                 {% elif request.session.backup_video_manage and request.session.session %}
