--- a/STSEval/management/templates/management/session_management.html
+++ b/STSEval/management/templates/management/session_management.html
@@ -36,6 +36,14 @@
             <span class="muted-text">Manage and upload backup videos here.  You can upload videos for specific gymnasts and events for judges to view instead of the stream.</span><br/>
             <a href="/backup_video_manage/{{session.id}}/"><button href="#"  type="button" class="btn btn-main mt-2">Backup Videos</button></a>
         </div>
+
+        <div class="col-3 pr-4 mt-4" align="right">
+             <h2>Testing</h2>
+        </div>
+        <div class="col-8 pt-2 pl-2 mt-4" align="left">
+            <span class="muted-text">Testing is required with all new participants.  Review the process here</span><br/>
+            <a href="/management/setup_testing/"><button href="#"  type="button" class="btn btn-main mt-2">Testing</button></a>
+        </div>
     </div>
    
 </div>
