--- a/STSEval/management/templates/management/setup_finish.html
+++ b/STSEval/management/templates/management/setup_finish.html
@@ -192,7 +192,7 @@
                 $("#divActivate").hide();
                 $("#btnSessionManagement").show();
                 $("#modalLoad").modal('hide');
-                 alert("Session activated, please review start lists on the overview page.");
+                alert("Session activated, please complete the required testing with camera and judge personell.");
             }
         });
        
