--- a/STSEval/app/templates/app/help/ejudge_vault.html
+++ b/STSEval/app/templates/app/help/ejudge_vault.html
@@ -1,4 +1,5 @@
 <div id="divHelpManageTeam" align="center">
+    <p align="left">View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-mag-tutorial-e-jury.mp4">here.</a></p>
 <p align="left">For the <b>Deduction Controller</b>, landscape mode is recommended.</p>
 <p align="left">There are four section to each vault:</p><ul align="left"><li>1<sup>st</sup> Flight</li><li>Support</li><li>2<sup>nd</sup> Flight</li><li>Landing</li></ul>
 <p align="left">Touch any section to enter deductions for that section. You can enter the deductions for the sections in any order.</p>
