--- a/STSEval/app/templates/app/help/ejudge.html
+++ b/STSEval/app/templates/app/help/ejudge.html
@@ -1,4 +1,5 @@
 <div id="divHelpManageTeam" align="center">
+<p align="left">View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-mag-tutorial-e-jury.mp4">here.</a></p>
 <p align="left">For the <b>Deduction Controller</b>, landscape mode is recommended.</p>
 <p align="left">Once the exercise has begun, click the appropriate deductions.</p><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/deduction-controller.png" width="400px">
 <p align="left">Once the exercise is completed, review your deductions.</p><ul align="left"><li>To change a deduction, click on the dot you wish to change and select the desired change.</li><li>Every change that is made will be outlined in white.</li></ul><img src="https://static.stslivegym.com/stseval-static/static/app/images/help/deduction-controller-review.png" width="400px">
