--- a/STSEval/app/templates/app/index.html
+++ b/STSEval/app/templates/app/index.html
@@ -22,6 +22,7 @@
             <a href="/account/login_coach/"><button id="btnCoach" name="btnCoach" type="button" class="btn btn-main mt-4" style="width:250px">Coach</button></a><br/>
             <a href="/account/login_camera/"><button id="btnCamera" name="btnCamera" type="button" class="btn btn-main mt-4" style="width:250px">Camera</button></a><br/>
              <a href="/select_session/"><button id="btnSpectator" name="btnSpectator" type="button"class="btn btn-main mt-4" style="width:250px">Spectator</button></a><br/><br/>
+             <a href="/video_tutorials/">Video Tutorials</a><br/><br/>
              <div align="center">STS Results &copy; {{ year }}</div>
         </div>
     </div>
