--- a/STSEval/app/templates/app/video_tutorials.html
+++ b/STSEval/app/templates/app/video_tutorials.html
@@ -26,7 +26,10 @@
             <a target="_blank" href="https://stslivegym.com/media/stslg-wag-tutorial-j2.mp4">WAG J-2</a><br/>
             <a target="_blank" href="https://stslivegym.com/media/stslg-tutorial-coach.mp4">Coach</a><br/>
             <a target="_blank" href="https://stslivegym.com/media/stslg-tutorial-camera.mp4">Camera</a><br/>
-            <a target="_blank" href="https://stslivegym.com/media/stslivegym-spectator-signup.mp4">Sepctator Signup</a><br/>
+            <a target="_blank" href="https://stslivegym.com/media/stslivegym-spectator-signup.mp4">Sepctator Signup</a><br/><br/>
+            <a href="/"><button id="btnBack" name="btnBack" type="button" class="btn btn-main mt-2" style="width:250px">Back</button></a><br/>
+            <br/>
+<div align="center">STS Results &copy; {{ year }}</div>
         </div>
     </div>
 </html>
