spectator help video

--- a/STSEval/app/templates/app/help/jjudge.html
+++ b/STSEval/app/templates/app/help/jjudge.html
@@ -2,3 +2,4 @@
 <div id="divHelpPage1">
 <p align="left">View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-wag-tutorial-j1.mp4">here.</a></p>
 </div>
+</div>
