--- a/STSEval/app/templates/app/spectate_splash_start.html
+++ b/STSEval/app/templates/app/spectate_splash_start.html
@@ -38,7 +38,8 @@
             <img class="pt-1" src="{% static 'app/images/stslivegym-white.svg' %}" style="height:25vh">
             <br/>
             <br/><br/>
-            <span>Click anywhere to continue</span>
+            <span>Click anywhere to continue</span><br/>
+            <span style="font-size:.8rem">View a video tutorial <a target="_blank" href="https://stslivegym.com/media/stslg-spectator.mp4">here.</a></span>
         </div>
         
     </div>
