--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -9,18 +9,20 @@
 <div id="AccountabilityReportBlackOut" style="width:100%;height:100%;background-color:#000000;opacity: .3;position:fixed;z-index:103;display:none" onclick="CloseAccountabilityReport()"></div>
 <div id="divAccountabilityReport" style="position:absolute;z-index:104;text-align:center;padding:5px;overflow:auto;display:none;background-color:rgb(97, 97, 106);color:white;top:10%;left:35%;width:40%"  class="rounded"></div>
 <div align="center">
+    {% if loadroutine == '' %}
     <div id="divBackupVideoAlertBox" style="display:none;position: absolute;top: 50px;right: 10px;z-index: 104;">
-    <div class="backup-video-alert" onclick="ShowStartList()" data-toggle="modal" data-target="#modalMain">
-        Backup Video(s) Available
+        <div class="backup-video-alert" onclick="ShowStartList()" data-toggle="modal" data-target="#modalMain">
+            Backup Video(s) Available
+        </div>
     </div>
-</div>
+    {% endif %}
 <div id="divHeader"></div>
 <div class="d-flex" style="justify-content:flex-start;align-items:center">
     <div style="flex:1"></div>
     <div>
         <span id="divAthleteLabel" onclick="ShowStartList()" data-toggle="modal" data-target="#modalMain" style="cursor:pointer"></span>
     </div>
-    <div style="flex:1;font-size:.7rem" align="left">&nbsp;&nbsp;<a href="#" onclick="ShowStartList()" data-toggle="modal" data-target="#modalMain">(View Start List)</a></div>
+    <div style="flex:1;font-size:.7rem" align="left">&nbsp;&nbsp;{% if loadroutine == '' %}<a href="#" onclick="ShowStartList()" data-toggle="modal" data-target="#modalMain">(View Start List)</a>{% endif %}</div>
 </div>
 <div class="row no-gutters">
     <div class="col-xl-8 col-12" align="right">
@@ -975,7 +977,8 @@
             document.getElementById("video-playback").pause();
             document.getElementById("video-playback").currentTime = 0;
         }
-        CheckBackupVideosAvailable();
+        if (LoadRot = '')
+            CheckBackupVideosAvailable();
     }
 
     function JudgesReadyClick() {
