--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -977,7 +977,7 @@
             document.getElementById("video-playback").pause();
             document.getElementById("video-playback").currentTime = 0;
         }
-        if (LoadRot = '')
+        if (LoadRot == '')
             CheckBackupVideosAvailable();
     }
 
